--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ email: melanymero7@gmail.com
 avatar: https://avatars3.githubusercontent.com/u/57650599?s=460&v=4
 
 # You'll want to customize url and baseurl for your own site:
-baseurl: "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
 # Social settings
