--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ facebook_url: https://www.facebook.com/melany.mero.9
 googleplus_url:
 instagram_url: https://www.instagram.com/melany14.mero/?hl=es-la
 linkedin_url:
-github_url:
+github_url:   https://github.com/melanymero7
 pinterest_url:
 slack_url:
 dribbble_url:
